fix: product-price alignment

--- a/dation.css
+++ b/dation.css
@@ -678,7 +678,7 @@ li a {
         margin: 0.5rem 0;
         color: "black";
     }
-
+    
     .product-origin {
         text-align: left;
         margin: 0.5rem 0;
@@ -686,8 +686,10 @@ li a {
         
     }
     .product-price {
+        text-align: left;
         margin-top: 0.5rem;
         margin-bottom: 1rem;
+        color: "black";
     }
 }
 
